premier version du rapport

--- a/report-v2/01-introduction/introduction.tex
+++ b/report-v2/01-introduction/introduction.tex
@@ -1,2 +1,2 @@
 \section{Introduction}
-content
+In this report we will explain the structure of the application designed to support the usage contracts for Ruby. First we present the overview of the applications and the concepts used to implements the usage contracts. The then structure of the DSL is detailed. Finally, a discussion about limitations and improvements that could be done is made.
