--- a/report-v2/cover/cover.tex
+++ b/report-v2/cover/cover.tex
@@ -51,7 +51,7 @@
 
 
 \vspace{4cm}
-\textsc{\Large LSINF2335: Programing paradigms: theory and practice}\\[0.5cm] % Major heading such as course name
+\textsc{\Large LSINF2335: Programing paradigms: theory, practice and applications}\\[0.5cm] % Major heading such as course name
 
 
 
@@ -60,7 +60,7 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \huge \bfseries Usage contracts in Ruby}\\[0.4cm] % Title of your document
+{ \huge \bfseries Usage contracts for Ruby}\\[0.4cm] % Title of your document
 \HRule \\[1.5cm]
  
 %----------------------------------------------------------------------------------------
