--- a/report-v2/main.tex
+++ b/report-v2/main.tex
@@ -62,11 +62,11 @@
 
 
 
-\include{01-introduction/introduction}
-\include{02-overview/overview}
-\include{03-dsl_specification/dsl_specification}
-\include{04-improvements/improvements}
-\include{05-conclusion/conclusion}
+\input{01-introduction/introduction}
+\input{02-overview/overview}
+\input{03-dsl_specification/dsl_specification}
+\input{04-improvements/improvements}
+\input{05-conclusion/conclusion}
 
 
 \end{document}
