--- a/report-v2/04-Improvements/Improvements.tex
+++ b/report-v2/04-Improvements/Improvements.tex
@@ -1,2 +1,8 @@
 \section{Improvements}
-content
+famille de méthodes
+
+toutes les méthodes dans une classes
+
+message pour savoir quelle condition faire foirer le contract
+
+autre?..
